// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defining a store 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "stored" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 19,
                "startLineNumber": 1,
              },
              "name": "s",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 19,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "stored",
      },
      "myFirstStore" => Object {
        "kind": "StoreDefinition",
        "loc": Object {
          "endColNumber": 18,
          "endLineNumber": 5,
          "startColNumber": 5,
          "startLineNumber": 3,
        },
        "name": "myFirstStore",
        "stores": Object {
          "children": Object {
            "Field": Array [
              Object {
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 11,
                  "endLineNumber": 2,
                  "startColNumber": 19,
                  "startLineNumber": 1,
                },
                "name": "s",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                    "modification": "none",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "testFile.cdt",
            "name": "testFile.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 19,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "stored",
        },
      },
    },
    "size": 2,
  },
}
`;

exports[`getting all data from store 1`] = `
Object {
  "fns": Array [
    Object {
      "body": Object {
        "kind": "FunctionBody",
        "loc": Object {
          "endColNumber": 41,
          "endLineNumber": 7,
          "startColNumber": 39,
          "startLineNumber": 7,
        },
        "statements": Array [
          Object {
            "kind": "ReturnStatement",
            "loc": Object {
              "endColNumber": 15,
              "endLineNumber": 8,
              "startColNumber": 41,
              "startLineNumber": 7,
            },
          },
          Object {
            "from": Object {
              "kind": "StoreDefinition",
              "loc": Object {
                "endColNumber": 17,
                "endLineNumber": 5,
                "startColNumber": 5,
                "startLineNumber": 3,
              },
              "name": "secondStore",
              "stores": Object {
                "children": Object {
                  "Field": Array [
                    Object {
                      "kind": "Field",
                      "loc": Object {
                        "endColNumber": 11,
                        "endLineNumber": 2,
                        "startColNumber": 19,
                        "startLineNumber": 1,
                      },
                      "name": "s",
                      "part": Object {
                        "FieldType": Object {
                          "differentiate": [Function],
                          "kind": "FieldType",
                          "modification": "none",
                        },
                      },
                    },
                  ],
                },
                "file": FileLocation {
                  "dir": "",
                  "fullname": "testFile.cdt",
                  "name": "testFile.cdt",
                },
                "kind": "Struct",
                "loc": Object {
                  "endColNumber": 19,
                  "endLineNumber": 1,
                  "startColNumber": 0,
                  "startLineNumber": 0,
                },
                "name": "stored",
              },
            },
            "kind": "StoreReference",
            "loc": Object {
              "endColNumber": 26,
              "endLineNumber": 8,
              "startColNumber": 15,
              "startLineNumber": 8,
            },
            "returnType": Object {
              "isArray": true,
              "kind": "real type",
              "val": Object {
                "children": Object {
                  "Field": Array [
                    Object {
                      "kind": "Field",
                      "loc": Object {
                        "endColNumber": 11,
                        "endLineNumber": 2,
                        "startColNumber": 19,
                        "startLineNumber": 1,
                      },
                      "name": "s",
                      "part": Object {
                        "FieldType": Object {
                          "differentiate": [Function],
                          "kind": "FieldType",
                          "modification": "none",
                        },
                      },
                    },
                  ],
                },
                "file": FileLocation {
                  "dir": "",
                  "fullname": "testFile.cdt",
                  "name": "testFile.cdt",
                },
                "kind": "Struct",
                "loc": Object {
                  "endColNumber": 19,
                  "endLineNumber": 1,
                  "startColNumber": 0,
                  "startLineNumber": 0,
                },
                "name": "stored",
              },
            },
          },
        ],
      },
      "kind": "Function",
      "loc": Object {
        "endColNumber": 23,
        "endLineNumber": 7,
        "startColNumber": 35,
        "startLineNumber": 5,
      },
      "method": "GET",
      "name": "getAllData",
      "parameter": Object {
        "differentiate": [Function],
        "kind": "Parameter",
      },
      "requiresDbClient": true,
      "returnType": Object {
        "isArray": true,
        "kind": "real type",
        "val": Object {
          "children": Object {
            "Field": Array [
              Object {
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 11,
                  "endLineNumber": 2,
                  "startColNumber": 19,
                  "startLineNumber": 1,
                },
                "name": "s",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                    "modification": "none",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "testFile.cdt",
            "name": "testFile.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 19,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "stored",
        },
      },
    },
  ],
  "inScope": EntityMap {
    "map": Map {
      "stored" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 19,
                "startLineNumber": 1,
              },
              "name": "s",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 19,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "stored",
      },
      "getAllData" => Object {
        "body": Object {
          "kind": "FunctionBody",
          "loc": Object {
            "endColNumber": 41,
            "endLineNumber": 7,
            "startColNumber": 39,
            "startLineNumber": 7,
          },
          "statements": Array [
            Object {
              "kind": "ReturnStatement",
              "loc": Object {
                "endColNumber": 15,
                "endLineNumber": 8,
                "startColNumber": 41,
                "startLineNumber": 7,
              },
            },
            Object {
              "from": Object {
                "kind": "StoreDefinition",
                "loc": Object {
                  "endColNumber": 17,
                  "endLineNumber": 5,
                  "startColNumber": 5,
                  "startLineNumber": 3,
                },
                "name": "secondStore",
                "stores": Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 11,
                          "endLineNumber": 2,
                          "startColNumber": 19,
                          "startLineNumber": 1,
                        },
                        "name": "s",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                            "modification": "none",
                          },
                        },
                      },
                    ],
                  },
                  "file": FileLocation {
                    "dir": "",
                    "fullname": "testFile.cdt",
                    "name": "testFile.cdt",
                  },
                  "kind": "Struct",
                  "loc": Object {
                    "endColNumber": 19,
                    "endLineNumber": 1,
                    "startColNumber": 0,
                    "startLineNumber": 0,
                  },
                  "name": "stored",
                },
              },
              "kind": "StoreReference",
              "loc": Object {
                "endColNumber": 26,
                "endLineNumber": 8,
                "startColNumber": 15,
                "startLineNumber": 8,
              },
              "returnType": Object {
                "isArray": true,
                "kind": "real type",
                "val": Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 11,
                          "endLineNumber": 2,
                          "startColNumber": 19,
                          "startLineNumber": 1,
                        },
                        "name": "s",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                            "modification": "none",
                          },
                        },
                      },
                    ],
                  },
                  "file": FileLocation {
                    "dir": "",
                    "fullname": "testFile.cdt",
                    "name": "testFile.cdt",
                  },
                  "kind": "Struct",
                  "loc": Object {
                    "endColNumber": 19,
                    "endLineNumber": 1,
                    "startColNumber": 0,
                    "startLineNumber": 0,
                  },
                  "name": "stored",
                },
              },
            },
          ],
        },
        "kind": "Function",
        "loc": Object {
          "endColNumber": 23,
          "endLineNumber": 7,
          "startColNumber": 35,
          "startLineNumber": 5,
        },
        "method": "GET",
        "name": "getAllData",
        "parameter": Object {
          "differentiate": [Function],
          "kind": "Parameter",
        },
        "requiresDbClient": true,
        "returnType": Object {
          "isArray": true,
          "kind": "real type",
          "val": Object {
            "children": Object {
              "Field": Array [
                Object {
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 11,
                    "endLineNumber": 2,
                    "startColNumber": 19,
                    "startLineNumber": 1,
                  },
                  "name": "s",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                      "modification": "none",
                    },
                  },
                },
              ],
            },
            "file": FileLocation {
              "dir": "",
              "fullname": "testFile.cdt",
              "name": "testFile.cdt",
            },
            "kind": "Struct",
            "loc": Object {
              "endColNumber": 19,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "stored",
          },
        },
      },
      "secondStore" => Object {
        "kind": "StoreDefinition",
        "loc": Object {
          "endColNumber": 17,
          "endLineNumber": 5,
          "startColNumber": 5,
          "startLineNumber": 3,
        },
        "name": "secondStore",
        "stores": Object {
          "children": Object {
            "Field": Array [
              Object {
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 11,
                  "endLineNumber": 2,
                  "startColNumber": 19,
                  "startLineNumber": 1,
                },
                "name": "s",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                    "modification": "none",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "testFile.cdt",
            "name": "testFile.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 19,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "stored",
        },
      },
    },
    "size": 3,
  },
}
`;

exports[`should allow enums 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "PurchaseCategory" => Object {
        "children": Object {
          "EnumMember": Array [
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 22,
                "endLineNumber": 2,
                "startColNumber": 27,
                "startLineNumber": 1,
              },
              "name": "UNCATEGORIZED",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 12,
                "endLineNumber": 3,
                "startColNumber": 22,
                "startLineNumber": 2,
              },
              "name": "GAS",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 15,
                "endLineNumber": 4,
                "startColNumber": 12,
                "startLineNumber": 3,
              },
              "name": "DINING",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 15,
                "endLineNumber": 5,
                "startColNumber": 15,
                "startLineNumber": 4,
              },
              "name": "TRAVEL",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 6,
                "startColNumber": 15,
                "startLineNumber": 5,
              },
              "name": "GROCERY",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 22,
                "endLineNumber": 7,
                "startColNumber": 16,
                "startLineNumber": 6,
              },
              "name": "ENTERTAINMENT",
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Enum",
        "loc": Object {
          "endColNumber": 27,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "PurchaseCategory",
      },
    },
    "size": 1,
  },
}
`;

exports[`should allow enums separated by whitespace 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "PurchaseCategory" => Object {
        "children": Object {
          "EnumMember": Array [
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 3,
                "startColNumber": 27,
                "startLineNumber": 1,
              },
              "name": "UNCATEGORIZED",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 4,
                "startColNumber": 0,
                "startLineNumber": 3,
              },
              "name": "GAS",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 4,
              },
              "name": "DINING",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 6,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "TRAVEL",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 7,
                "startColNumber": 0,
                "startLineNumber": 6,
              },
              "name": "GROCERY",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 8,
                "startColNumber": 0,
                "startLineNumber": 7,
              },
              "name": "ENTERTAINMENT",
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Enum",
        "loc": Object {
          "endColNumber": 27,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "PurchaseCategory",
      },
    },
    "size": 1,
  },
}
`;

exports[`should allow multiple enums separated by whitespace 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "PurchaseCategory" => Object {
        "children": Object {
          "EnumMember": Array [
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 3,
                "startColNumber": 27,
                "startLineNumber": 1,
              },
              "name": "UNCATEGORIZED",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 4,
                "startColNumber": 0,
                "startLineNumber": 3,
              },
              "name": "GAS",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 4,
              },
              "name": "DINING",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 6,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "TRAVEL",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 7,
                "startColNumber": 0,
                "startLineNumber": 6,
              },
              "name": "GROCERY",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 8,
                "startColNumber": 0,
                "startLineNumber": 7,
              },
              "name": "ENTERTAINMENT",
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Enum",
        "loc": Object {
          "endColNumber": 27,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "PurchaseCategory",
      },
      "OtherCategories" => Object {
        "children": Object {
          "EnumMember": Array [
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 12,
                "startColNumber": 26,
                "startLineNumber": 10,
              },
              "name": "A",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 13,
                "startColNumber": 0,
                "startLineNumber": 12,
              },
              "name": "B",
            },
            Object {
              "kind": "EnumMember",
              "loc": Object {
                "endColNumber": 0,
                "endLineNumber": 14,
                "startColNumber": 0,
                "startLineNumber": 13,
              },
              "name": "C",
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Enum",
        "loc": Object {
          "endColNumber": 26,
          "endLineNumber": 10,
          "startColNumber": 5,
          "startLineNumber": 8,
        },
        "name": "OtherCategories",
      },
    },
    "size": 2,
  },
}
`;

exports[`should allow one struct to reference another 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 15,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 0,
                "startLineNumber": 3,
              },
              "name": "f",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 4,
                "startColNumber": 0,
                "startLineNumber": 4,
              },
              "name": "i32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "I",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 6,
                "startColNumber": 0,
                "startLineNumber": 6,
              },
              "name": "u32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 7,
                "startColNumber": 0,
                "startLineNumber": 7,
              },
              "name": "u64",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 18,
                "endLineNumber": 10,
                "startColNumber": 14,
                "startLineNumber": 9,
              },
              "name": "myMessag",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 14,
          "endLineNumber": 9,
          "startColNumber": 5,
          "startLineNumber": 8,
        },
        "name": "m2",
      },
    },
    "size": 2,
  },
}
`;

exports[`should allow the specification of optional fields 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "Mystruct" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 21,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 0,
                "startLineNumber": 3,
              },
              "name": "f",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 4,
                "startColNumber": 0,
                "startLineNumber": 4,
              },
              "name": "i32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "I",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 6,
                "startColNumber": 0,
                "startLineNumber": 6,
              },
              "name": "u32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 7,
                "startColNumber": 0,
                "startLineNumber": 7,
              },
              "name": "u64",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 8,
                "startColNumber": 0,
                "startLineNumber": 8,
              },
              "name": "b",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 9,
                "startColNumber": 0,
                "startLineNumber": 9,
              },
              "name": "s",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 12,
                "endLineNumber": 10,
                "startColNumber": 0,
                "startLineNumber": 10,
              },
              "name": "bs",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "optional",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 21,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "Mystruct",
      },
    },
    "size": 1,
  },
}
`;

exports[`should convert multiple conduit into manifest 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 15,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 0,
                "startLineNumber": 3,
              },
              "name": "f",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 4,
                "startColNumber": 0,
                "startLineNumber": 4,
              },
              "name": "i32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "I",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 6,
                "startColNumber": 0,
                "startLineNumber": 6,
              },
              "name": "u32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 7,
                "startColNumber": 0,
                "startLineNumber": 7,
              },
              "name": "u64",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 10,
                "startColNumber": 14,
                "startLineNumber": 9,
              },
              "name": "b",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 11,
                "startColNumber": 0,
                "startLineNumber": 11,
              },
              "name": "s",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 12,
                "endLineNumber": 12,
                "startColNumber": 0,
                "startLineNumber": 12,
              },
              "name": "bs",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 14,
          "endLineNumber": 9,
          "startColNumber": 5,
          "startLineNumber": 8,
        },
        "name": "m2",
      },
    },
    "size": 2,
  },
}
`;

exports[`should convert simple conduit into manifest 1`] = `
Object {
  "fns": Array [],
  "inScope": EntityMap {
    "map": Map {
      "Mystruct" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 21,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 0,
                "startLineNumber": 3,
              },
              "name": "f",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 4,
                "startColNumber": 0,
                "startLineNumber": 4,
              },
              "name": "i32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "I",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 6,
                "startColNumber": 0,
                "startLineNumber": 6,
              },
              "name": "u32",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 13,
                "endLineNumber": 7,
                "startColNumber": 0,
                "startLineNumber": 7,
              },
              "name": "u64",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 8,
                "startColNumber": 0,
                "startLineNumber": 8,
              },
              "name": "b",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 9,
                "startColNumber": 0,
                "startLineNumber": 9,
              },
              "name": "s",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 12,
                "endLineNumber": 10,
                "startColNumber": 0,
                "startLineNumber": 10,
              },
              "name": "bs",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                  "modification": "none",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 21,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "Mystruct",
      },
    },
    "size": 1,
  },
}
`;
